--- a/ig/nr-add-validator-link/valider_res.html
+++ b/ig/nr-add-validator-link/valider_res.html
@@ -250,7 +250,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <ul>
   <li>Sous forme d’un package pour un cas d’usage particulier, c’est sous cette forme qu’ils sont définis dans le <a href="https://registry.fhir.org/">FHIR REGISTRY</a> (dans les ImplementationGuide, un package est systématiquement généré à l’adresse [url]/package.tgz, ex : [https://www.hl7.org/fhir/us/core/package.tgz])</li>
-  <li>Le / les profils ne sont pas issus d’un contexte particulier et se présentent sous forme d’un ficher xml ou json (pratique à déconseillée)</li>
+  <li>Le / les profils ne sont pas issus d’un contexte particulier et se présentent sous forme d’un ficher xml ou json (pratique à déconseiller)</li>
 </ul>
 
 <h5 id="cas-a--à-partir-dun-package">Cas a : à partir d’un package</h5>
@@ -341,7 +341,7 @@ Pour cela, il faudra utiliser l’opération <a href="https://www.hl7.org/fhir/r
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 18, 2023 09:12+0000">2023-12-18</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 8, 2024 14:13+0000">2024-01-08</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
                       Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
