update criteria 951ed69092e753d3fd70530002fad4e417543ab7

--- a/ig/nr-update-maturity/bonnes_pratiques_modeler.html
+++ b/ig/nr-update-maturity/bonnes_pratiques_modeler.html
@@ -237,13 +237,12 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <h3 id="critères-de-maturité">Critères de maturité</h3>
 
 <ul>
-  <li>Ensemble des critères de qualité respectés</li>
+  <li>Respect de l’ensemble des critères de qualité mentionnés ci-dessus</li>
   <li>Nombre d’implémentation obtenu par déclaration (par convergence ou par les DSI). Idéalement, publier des retours d’expérience sur l’implémentation des spécifications</li>
-  <li>Nombre de tests réalisés lors de projectathon, et nombre de partenaires</li>
+  <li>Nombre de projectathons, nombre de tests réalisés lors de projectathon, et nombre de partenaires</li>
   <li>Nombre d’issues et résolutions sur le repo GitHub</li>
   <li>Nombre de commentaires lors des phases de concertation</li>
-  <li>Publication du package avec des dépendances : les ressources héritées ne sont pas dupliquées</li>
-  <li>L’ensemble des ressources de conformité doit avoir une description précise de son utilité</li>
+  <li>L’ensemble des ressources de conformité doit avoir une description précise de son usage</li>
 </ul>
 
 <h3 id="choix-de-la-version-de-fhir">Choix de la version de FHIR</h3>
@@ -480,7 +479,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.5 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Jan 30, 2024 16:48+0000">2024-01-30</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.5 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Jan 30, 2024 16:53+0000">2024-01-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
                       Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
