--- a/nr-add-matchbox-validation/ig/tests.html
+++ b/nr-add-matchbox-validation/ig/tests.html
@@ -212,8 +212,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <ul id="markdown-toc">
   <li><a href="#outils-de-tests" id="markdown-toc-outils-de-tests">Outils de tests</a></li>
   <li><a href="#matchbox" id="markdown-toc-matchbox">Matchbox</a></li>
-  <li><a href="#gazelle--les-niveaux-de-cas-de-tests" id="markdown-toc-gazelle--les-niveaux-de-cas-de-tests">Gazelle : les niveaux de cas de tests</a></li>
-  <li><a href="#types-détapes-de-cas-de-tests" id="markdown-toc-types-détapes-de-cas-de-tests">Types d’étapes de cas de tests</a></li>
+  <li><a href="#gazelle" id="markdown-toc-gazelle">Gazelle</a></li>
+  <li><a href="#les-niveaux-des-scénarios-gazelle" id="markdown-toc-les-niveaux-des-scénarios-gazelle">Les niveaux des scénarios gazelle</a></li>
   <li><a href="#hapi-fhir" id="markdown-toc-hapi-fhir">HAPI FHIR</a></li>
 </ul>
 
@@ -252,33 +252,40 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <p>Une fois validé, les messages d’erreurs sont accessibles en-dessous :</p>
 
 <div style="text-align: center;"><img width="80%" alt="image" src="resultat-validation.png" /></div>
+
+<p>Un détail par ligne est également accessible :</p>
+
 <div style="text-align: center;"><img width="80%" alt="image" src="erreurs-lignes.png" /></div>
 
-<h3 id="gazelle--les-niveaux-de-cas-de-tests">Gazelle : les niveaux de cas de tests</h3>
+<h3 id="gazelle">Gazelle</h3>
+
+<p>Gazelle est un outil de tests qui s’appuie sur des validateurs tel que matchbox pour FHIR pour établir des scénarios de tests complets.</p>
+
+<h3 id="les-niveaux-des-scénarios-gazelle">Les niveaux des scénarios gazelle</h3>
 
 <p>Différents niveaux de tests sont proposés sur l’espace de test de l’ANS afin d’aider les éditeurs dans leur préparation aux évènements de type projectathon.</p>
 
 <p>Le niveau le plus bas permettra aux éditeurs de tester la conformité des messages unitaires qu’ils produisent. Le niveau intermédiaire permettra aux éditeurs de tester face à un autre système la conformité et l’interopérabilité des messages unitaires. Le niveau le plus élevé correspond aux scénarios proposés jusqu’à maintenant dans le cadre des projectathons et permettra aux éditeurs de tester des scénarios complexes face à un autre système.</p>
 
-<h4 id="niveau-1-n1">Niveau 1 (N1)</h4>
+<h5 id="niveau-1-n1">Niveau 1 (N1)</h5>
 
 <p>Les tests de niveau 1 sont des tests unitaires sans partenaire.
 Chaque cas de test de niveau 1 correspond à un flux de la spécification technique.
 L’objectif de ces cas de tests est de valider la ressource ou la requête produite par le système avec un validateur EVSClient indiqué dans le cas de test.</p>
 
-<h4 id="niveau-2-n2">Niveau 2 (N2)</h4>
+<h5 id="niveau-2-n2">Niveau 2 (N2)</h5>
 
 <p>Les tests de niveau 2 sont des tests unitaires avec partenaire.
 Pour être exécutés, il faut qu’au préalable les cas de test de niveau 1 indiqués en prérequis aient été exécutés par les 2 mêmes systèmes.
 L’objectif de ces cas de test est de valider la ressource ou la requête construite ainsi que la capacité des systèmes à créer / intégrer ou requêter / envoyer des ressources. Les cas de tests de type N2 correspondent généralement à un flux spécifique.</p>
 
-<h4 id="niveau-3-n3">Niveau 3 (N3)</h4>
+<h5 id="niveau-3-n3">Niveau 3 (N3)</h5>
 
 <p>Les tests de niveau 3 sont des tests avec partenaire basés sur l’enchaînement de différents tests unitaires avec partenaire (N2) en suivant un scénario complexe. Pour être exécutés, il faut qu’au préalable les cas de test de niveaux 1 et 2 indiqués en prérequis aient été exécutés entre les 2 mêmes systèmes.</p>
 
 <p>L’objectif de ces cas de test est de créer un scénario complexe faisant appel aux différents flux de la spécification technique et ainsi créer un exemple d’usage.</p>
 
-<h3 id="types-détapes-de-cas-de-tests">Types d’étapes de cas de tests</h3>
+<h4 id="les-types-détapes-de-cas-de-tests">Les types d’étapes de cas de tests</h4>
 
 <p>Les étapes de cas de tests pourront avoir plusieurs types.</p>
 
@@ -368,7 +375,7 @@ L’objectif de ces cas de test est de valider la ressource ou la requête const
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Apr 10, 2024 06:54+0000">2024-04-10</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Apr 10, 2024 07:08+0000">2024-04-10</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
                       Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
