--- a/nr-add-matchbox-validation/ig/github.html
+++ b/nr-add-matchbox-validation/ig/github.html
@@ -212,6 +212,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <ul id="markdown-toc">
   <li><a href="#reporter-un-problème-une-issue" id="markdown-toc-reporter-un-problème-une-issue">Reporter un problème (une issue)</a></li>
   <li><a href="#travailler-sur-un-repository" id="markdown-toc-travailler-sur-un-repository">Travailler sur un repository</a></li>
+  <li><a href="#mettre-en-place-un-workflow-de-validationgénérationpublication" id="markdown-toc-mettre-en-place-un-workflow-de-validationgénérationpublication">Mettre en place un workflow de validation/génération/publication</a></li>
 </ul>
 
 </div>
@@ -279,6 +280,25 @@ Chaque PR doit être validée par quelqu’un d’autre pour :</p>
   <li>Permettre une relecture pour éviter les erreurs</li>
 </ul>
 
+<h3 id="mettre-en-place-un-workflow-de-validationgénérationpublication">Mettre en place un workflow de validation/génération/publication</h3>
+
+<p>Afin de faciliter les actions au regards des IG, l’ANS  met à disposition un <a href="https://github.com/ansforge/IG-workflows">GitHub Action</a>  avec les fonctionnalités suivantes :</p>
+<ul>
+  <li>Lancement de sushi</li>
+  <li>Tests avec le validateur_cli</li>
+  <li>Incorporation des projets de simplifier (Methode bake)</li>
+  <li>Publication des releases sur un repo github</li>
+  <li>Génération du diagramme plantuml à partir de des données de l’IG</li>
+  <li>Génération des diagrammes de mapping plantuml</li>
+  <li>Génération des testscripts avec le projet testscript-generator</li>
+  <li>Publication sur les pages github :
+    <ul>
+      <li>Diagramme de class plantuml généré à partir des données de l’IG</li>
+      <li>Rapport de validation du validator_cli</li>
+    </ul>
+  </li>
+</ul>
+
 
 
 
@@ -326,7 +346,7 @@ Chaque PR doit être validée par quelqu’un d’autre pour :</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Apr 10, 2024 08:08+0000">2024-04-10</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.6 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Apr 10, 2024 08:20+0000">2024-04-10</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
                       Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
