--- a/nr-prepare-release-0.1.7/ig/tests.html
+++ b/nr-prepare-release-0.1.7/ig/tests.html
@@ -238,16 +238,18 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <p>Matchbox est un outil permettant notamment de valider des instances de ressources FHIR contre un profil. L’outil matchbox est <a href="https://github.com/ahdis/matchbox">open source</a>.</p>
 
 <h4 id="accés-à-matchbox-et-à--la-validation">Accés à Matchbox et à  la validation</h4>
-<p>L’instance matchbox de l’ANS est accessible via <a href="https://interop.esante.gouv.fr/matchboxv3">cette URL</a>.</p>
+
+<p>L’instance matchbox de l’ANS est accessible via <a href="https://interop.esante.gouv.fr/matchboxv4">cette URL</a>.</p>
 
 <p>Cette instance permet de faire des vérification au regard :</p>
+
 <ul>
   <li>Des guides d’implémentation de l’ANS</li>
   <li>Des guides d’implementation d’InteropSanté</li>
-  <li>Du  FHIR Terminology Service (FTS) du Serveur Multi Terminologique (<a href="https://smt.esante.gouv.fr/">SMT</a>).</li>
+  <li>Du FHIR Terminology Service (FTS) du Serveur Multi Terminologique (<a href="https://smt.esante.gouv.fr/">SMT</a>).</li>
 </ul>
 
-<p>Pour valider une ressource FHIR contre un profil, il suffit de cliquer sur le boutôn “Validate …”</p>
+<p>Pour valider une ressource FHIR contre un profil, il suffit de cliquer sur le bouton “Validate …”</p>
 
 <div style="text-align: center;"><img width="80%" alt="image" src="homepage-matchbox.png" /></div>
 
@@ -387,7 +389,7 @@ L’objectif de ces cas de test est de valider la ressource ou la requête const
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Apr 10, 2024 08:41+0000">2024-04-10</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Apr 30, 2024 15:29+0000">2024-04-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
                       Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
