--- a/nr-prepare-release-0.1.7/ig/qa.html
+++ b/nr-prepare-release-0.1.7/ig/qa.html
@@ -36,7 +36,7 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Validation Results for Documentation</h1>
- <p>Generated Thu May 02 12:51:38 UTC 2024, FHIR version 4.0.1 for ans.fr.documentation#0.1.7 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a></p>
+ <p>Generated Thu May 02 12:52:38 UTC 2024, FHIR version 4.0.1 for ans.fr.documentation#0.1.7 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a></p>
 <table class="grid"> <tr><td colspan=2><b>Quality Checks</b></td></tr>
  <tr><td>Publisher Version:</td><td><span>IG Publisher Version: v1.6.6</span></td></tr>
  <tr><td>Publication Code:</td><td>n/a<span style="color: maroon; font-weight: bold"> </span>. PackageId = ans.fr.documentation, Canonical = https://interop.esante.gouv.fr/ig/documentation</td></tr>
@@ -52,7 +52,7 @@
  <tr><td>desc</d><td>Documentation des guides d'implémentation de l'ANS</td></tr>
  <tr><td>descmd</d><td><p>Documentation des guides d'implémentation de l'ANS v 0.1.7</p>
 <ul>
-<li>Ajout de conseils de validation des ressources FHIR avec matchbox(<a href="https://github.com/ansforge/IG-documentation/pull/60">PR 60</a>)</li>
+<li>Ajout de conseils de validation des ressources FHIR avec matchbox(<a href="https://github.com/ansforge/IG-documentation/pull/60">PR 60</a> et <a href="https://github.com/ansforge/IG-documentation/pull/62">PR 62</a>)</li>
 </ul>
 </td></tr>
 </table>
