--- a/main/ig/qa.min.html
+++ b/main/ig/qa.min.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<!-- broken links = 3, errors = 3, warn = 4, info = 0-->
+<!-- broken links = 4, errors = 3, warn = 4, info = 0-->
 <head>
   <title>Documentation : Validation Results</title>
   <link href="fhir.css" rel="stylesheet"/>
@@ -36,7 +36,7 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Validation Results for Documentation</h1>
- <p>Generated Thu May 02 15:17:46 UTC 2024, FHIR version 4.0.1 for ans.fr.documentation#0.1.7 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.html">Full QA Report</a></p>
+ <p>Generated Thu May 02 15:18:28 UTC 2024, FHIR version 4.0.1 for ans.fr.documentation#0.1.7 (canonical = <a href="https://interop.esante.gouv.fr/ig/documentation">https://interop.esante.gouv.fr/ig/documentation</a> (<a href="https://interop.esante.gouv.fr/ig/documentation/history.html">history</a>)). See <a href="qa.html">Full QA Report</a></p>
 <table class="grid"> <tr><td colspan=2><b>Quality Checks</b></td></tr>
  <tr><td>Publisher Version:</td><td><span>IG Publisher Version: v1.6.6</span></td></tr>
  <tr><td>Publication Code:</td><td>n/a<span style="color: maroon; font-weight: bold"> </span>. PackageId = ans.fr.documentation, Canonical = https://interop.esante.gouv.fr/ig/documentation</td></tr>
@@ -79,14 +79,14 @@ hl7.fhir.r4.core#4.0.1:     <a href="http://hl7.org/fhir/R4/codesystem-guide-par
  <tr><td>Previous Version Comparison:</td><td> <a href="comparison-v0.1.6/index.html">Comparison with version 0.1.6</a></td></tr>
  <tr><td>IPA Comparison:</td><td> n/a</td></tr>
  <tr><td>IPS Comparison:</td><td> n/a</td></tr>
- <tr><td>Summary:</td><td> errors = 3, warn = 4, info = 0, broken links = 3</td></tr>
+ <tr><td>Summary:</td><td> errors = 3, warn = 4, info = 0, broken links = 4</td></tr>
 </table>
  <table class="grid">
    <tr>
      <td><b>Filename</b></td><td><b>Errors</b></td><td><b>Warnings</b></td><td><b>Hints</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><a href="#internal"><b>Build Errors</b></a></td><td><b>5</b></td><td><b>4</b></td><td><b>0</b></td>
+     <td><a href="#internal"><b>Build Errors</b></a></td><td><b>6</b></td><td><b>4</b></td><td><b>0</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
      <td><a href="#_home_runner_work_IG-documentation_IG-documentation_igSource_fsh-generated_resources_ImplementationGuide-ans.fr.documentation"><b>/home/runner/work/IG-documentation/IG-documentation/igSource/fsh-generated/resources/ImplementationGuide-ans.fr.documentation</b></a></td><td><b>1</b></td><td><b>0</b></td><td><b>0</b></td>
@@ -111,6 +111,9 @@ hl7.fhir.r4.core#4.0.1:     <a href="http://hl7.org/fhir/R4/codesystem-guide-par
    </tr>
    <tr style="background-color: #ffcccc">
      <td><b><a href="collaborons.html#l454">output&#8203;/collaborons&#8203;.html&#8203;#&#8203;/html&#8203;/body&#8203;/div&#8203;/div&#8203;/div&#8203;/div&#8203;/div&#8203;/p&#8203;/a at Line 258, column 64</a></b></td><td><b>error</b></td><td><b>The link 'ci-sis@esante.gouv.fr' for &quot;l’adresse email du CI-SIS&quot; cannot be resolved</b></td>
+   </tr>
+   <tr style="background-color: #ffcccc">
+     <td><b><a href="valider_res.html#l418">output&#8203;/valider_res&#8203;.html&#8203;#&#8203;/html&#8203;/body&#8203;/div&#8203;/div&#8203;/div&#8203;/div&#8203;/div&#8203;/ul&#8203;/li&#8203;/a at Line 240, column 8</a></b></td><td><b>error</b></td><td><b>The link '[https://test.ahdis.ch/matchbox](https://test.ahdis.ch/matchbox/#/)' for &quot;Matchbox&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffebcc">
      <td><b>1</b></td><td><b>warning</b></td><td title=""><b>The HTML fragment 'ip-statements.xhtml' is not included anywhere in the produced implementation guide</b></td>
