update good practice d08ce5a7805de3571be8e8b8d1da8ce8e32cc0bb

--- a/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
@@ -392,7 +392,7 @@ releaseLabel: trial-use</p>
 
 <h3 id="release-dun-ig-fhir">Release d’un IG FHIR</h3>
 
-<p>Les travaux de mise à jour actuelle définissent des nouveaux statuts pour les guides d’implémentation, voici la correspondance entre les statuts pressentis et les paramètres de publication :</p>
+<p>Les travaux de mise à jour actuelle définissent des nouveaux statuts pour les guides d’implémentation, voici la correspondance entre les statuts et les paramètres de publication :</p>
 
 <table>
   <tbody>
