--- a/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
@@ -392,22 +392,18 @@ releaseLabel: trial-use</p>
 
 <h3 id="release-dun-ig-fhir">Release d’un IG FHIR</h3>
 
-<p>Les travaux de mise à jour actuelle définissent des nouveaux statuts pour les guides d’implémentation, voici la correspondance entre les statuts et les paramètres de publication :</p>
+<p>Les travaux de mise à jour actuelle définissent des nouveaux statuts pour les guides d’implémentation, voici la correspondance entre les statuts pressentis et les paramètres de publication :</p>
 
 <table>
+  <thead>
+    <tr>
+      <th> Statut de maturité CI-SIS</th>
+      <th>Statut sushi-config</th>
+      <th>label de publication</th>
+      <th>Mode de publication</th>
+    </tr>
+  </thead>
   <tbody>
-    <tr>
-      <td> Statut de maturité CI-SIS</td>
-      <td>Statut sushi-config</td>
-      <td>label de publication</td>
-      <td>Mode de publication</td>
-    </tr>
-    <tr>
-      <td>***</td>
-      <td>***</td>
-      <td>***</td>
-      <td>***</td>
-    </tr>
     <tr>
       <td>draft</td>
       <td>draft</td>
@@ -540,7 +536,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 09:08+0000">2024-07-11</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 09:29+0000">2024-07-11</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
