--- a/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
@@ -383,9 +383,9 @@ Le label de publication doit se placer dans l’attribut “label” du fichier 
   <thead>
     <tr>
       <th> Statut de maturité CI-SIS</th>
-      <th>Statut (fichier sushi-config)</th>
-      <th>label de publication (fichier publication-request) et releaseLabel (fichier sushi-config)</th>
-      <th>Mode de publication (fichier publication-request)</th>
+      <th>Statut IG</th>
+      <th>label de publication</th>
+      <th>Mode de publication</th>
     </tr>
   </thead>
   <tbody>
@@ -514,7 +514,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 09:51+0000">2024-07-11</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 11:34+0000">2024-07-11</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
