--- a/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-github-good-practice/ig/bonnes_pratiques_modeler.html
@@ -232,7 +232,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <ul>
   <li>Respect des bonnes pratiques nationales tel que les règles de nommages indiquées ci-dessous</li>
   <li>Respect des <a href="https://build.fhir.org/ig/FHIR/ig-guidance/best-practice.html">bonnes pratiques internationales</a></li>
-  <li>Respecter le choix de la version FHIR</li>
+  <li>Respecter le stratégie nationale des choix de version FHIR</li>
+  <li>Chaque ressource de conformité doit avoir une description</li>
   <li>L’ensemble des ressources de conformité doit avoir une description précise de son usage</li>
   <li>Publication de l’IG sans erreurs (cf session Q/A)</li>
 </ul>
@@ -514,7 +515,7 @@ Ce choix n’est pas tranché, c’est l’écosystème qui dictera quelle versi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 11, 2024 11:34+0000">2024-07-11</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Jul 12, 2024 12:27+0000">2024-07-12</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
