--- a/nr-refacto/ig/dev_nouvel_ig.html
+++ b/nr-refacto/ig/dev_nouvel_ig.html
@@ -224,7 +224,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Prérequis : suivre la <a href="https://ansforge.github.io/Documentation">documentation</a> pour créer un compte GitHub, l’associer à l’organisation ANS et créer un nouveau projet.</p>
 
-<p>Ce nouveau projet doit utiliser le GitHub template ansforge/IG-modele et doit être préfixé par “IG-…”. Le repository GitHub doit être nommé de sorte  qu’il soit facilement retrouvé et compréhensible par n’importe qui : Descriptif, lisible, cohérent, contextuel, extensible, réutilisable, bref. Il doit être préfixé par “IG-“[…]. Exemple : IG-fhir-partage-de-documents-de-sante. N’hésitez pas à demander avis à la team interop :).
+<p>Ce nouveau projet doit utiliser le GitHub template ansforge/IG-modele et doit être préfixé par “IG-…”. Le repository GitHub doit être nommé de sorte  qu’il soit facilement retrouvé et compréhensible par n’importe qui : Descriptif, lisible, cohérent, contextuel, extensible, réutilisable, bref. Il doit être préfixé par “IG-“[…]. Exemple : IG-fhir-partage-de-documents-de-sante. N’hésitez pas à solliciter la team interopérabilité de l’ANS pour avis.
 L’IG est créé! Il faut maintenant le personnaliser</p>
 
 <h3 id="paramétrage-de-lig">Paramétrage de l’IG</h3>
@@ -465,7 +465,7 @@ bash _genonce.sh <span class="c"># Génère l'IG</span>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Aug 23, 2024 11:36+0000">2024-08-23</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Oct 30, 2024 14:54+0000">2024-10-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
