--- a/nr-refacto/ig/index.html
+++ b/nr-refacto/ig/index.html
@@ -266,7 +266,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Selon la documentation FHIR, un Implementation Guide contient un ensemble cohérent de ressources de conformité pour répondre à une problématique particulière.</p>
 
-<p>Un implementation guide se présente sous forme d’un site web et d’un package contenant l’ensemble des ressources de conformité. Les implementation guides (site web, ressources de conformité et package) sont versionnés, l’ensemble des versions historiques seront toujours accessibles.</p>
+<p>Un implementation guide se présente sous forme d’un site web et d’un package contenant l’ensemble des ressources de conformité. Les implementation guides (site web, ressources de conformité et package) sont versionnés. L’ensemble des versions historiques seront toujours accessibles.</p>
 
 <p>La meilleure pratique consiste à créer un Implementation Guide par projet bien spécifique, cela permet :</p>
 
@@ -274,8 +274,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <li>De versionner séparément, on peut ainsi mettre à jour chacune des specs séparément sans avoir à mettre à jour celles qui ne sont pas concernées</li>
   <li>Chacune des specs gère ses dépendances indépendamment des autres (aux ressources du ci-sis, aux profils interopsanté), chacune de ces dépendances peuvent être mises à jour séparément</li>
   <li>Les urls sont claires, on sait directement de quelle spécification est issue chaque profil, et on peut directement accéder à l’IG en connaissant l’url canonique de l’IG</li>
-  <li>Les documentations génériques peuvent être surspécifiées pour réutiliser certains profils pour un autre cas d’usage, en héritant de tout ou partie, ou pour décrire une implémentation précise.</li>
-  <li>L’IG doit obligatoirement hériter des profils FHIR réalisés par InteropSanté et/ou par l’ANS.</li>
+  <li>Les documentations génériques peuvent être surspécifiées pour réutiliser certains profils pour un autre cas d’usage, en héritant de tout ou partie, ou pour décrire une implémentation précise</li>
+  <li>L’IG doit obligatoirement hériter des profils FHIR réalisés par InteropSanté et/ou par l’ANS s’ils existent.</li>
 </ul>
 
 <p>Documentation : <a href="https://www.hl7.org/fhir/implementationguide.html">ImplementationGuide</a>, <a href="https://confluence.hl7.org/display/FHIR/NPM+Package+Specification">Packages</a></p>
@@ -396,7 +396,7 @@ Il prend en entrée une arborescence de dossiers / fichiers bien définis, conte
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Oct 30, 2024 14:54+0000">2024-10-30</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Oct 30, 2024 14:56+0000">2024-10-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
