--- a/nr-refacto/ig/about.html
+++ b/nr-refacto/ig/about.html
@@ -40,7 +40,8 @@
   <body onload="document.body.style.opacity='1'">
 
 	  <script src="assets/js/prism.js"></script>
-
+    <script src="assets/js/mermaid.js" type="text/javascript"></script>
+    <script src="assets/js/mermaid-init.js" type="text/javascript"></script>
     <style type="text/css">h2{--heading-prefix:"7"}
     h3,h4,h5,h6{--heading-prefix:"7"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
@@ -51,7 +52,12 @@
   </div>
   <div style="line-height: 50px; float: left; margin-top: 4px; margin-bottom: 8px; color: #808080; " id="ans-nav">
     <a no-external="true" id="hl7-logo" href="https://esante.gouv.fr/"><img src="assets/images/logo-ANS.svg" alt="ANS Logo" height="50"/></a>
+    <a no-external="true" id="hl7-search-lnk" href="searchform.html"><img src="assets/images/search.png" alt="Search FHIR"/></a>
   </div>
+
+  <div id="ig-search">
+ </div>
+
 
         <div id="ig-status">
           <p><span style="font-size:12pt;font-weight:bold">Documentation des guides d'implémentation de l'ANS</span>
@@ -60,7 +66,7 @@
 
 
 
-  <img src="assets/images/fra.svg" alt="France flag" title="France" height="16"/>
+  <img src="assets/images/zwe.svg" alt=" flag" title="null" height="16"/>
 
 
             </span>
@@ -234,7 +240,7 @@ Exemples d’usage :</p>
 
 <p>Une fois validé et publié sur le <a href="https://registry.fhir.org/">FHIR Registry</a>, ce guide pourra être utilisé comme héritage pour être surspécifié. Par exemple, il pourra être surspécifié et versionné pour créer une documentation applicative.</p>
 
-<p><a name="l424">​</a>L’onglet de <a href="downloads.html">téléchargement</a> vous permettra de télécharger :</p>
+<p><a name="l434">​</a>L’onglet de <a href="downloads.html">téléchargement</a> vous permettra de télécharger :</p>
 
 <ul>
   <li>Le package qui contient toutes les ressources de conformité (StructureDefinition, SearchParameter, …)</li>
@@ -289,7 +295,7 @@ Exemples d’usage :</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Oct 30, 2024 14:56+0000">2024-10-30</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Feb 21, 2025 16:46+0000">2025-02-21</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
