--- a/nr-add-doc-expand-publish/ig/qa-ipreview.html
+++ b/nr-add-doc-expand-publish/ig/qa-ipreview.html
@@ -130,7 +130,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.7 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Apr 28, 2025 07:18+0000">2025-04-28</span>
+. Generated           <span title="Mon, Apr 28, 2025 07:53+0000">2025-04-28</span>
 
                     <br/>
 
@@ -160,7 +160,7 @@ Documentation des guides d'implémentation de l'ANS - Local Development build (v
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.7 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Apr 28, 2025 07:18+0000">2025-04-28</span>
+. Generated           <span title="Mon, Apr 28, 2025 07:53+0000">2025-04-28</span>
 
                     <br/>
 
@@ -288,6 +288,18 @@ Si un sujet n’est pas encore traité en France, il est possible de proposer un
         </td>
         <td>
 Une concertation de minimum trois mois doit être lancée sur la plateforme           <a href="https://participez.esante.gouv.fr">participez</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="demarrer_sur_fhir.html">web</a>
+        </td>
+        <td>
+          <a href="https://smt.esante.gouv.fr">smt.esante.gouv.fr</a>
+        </td>
+        <td>
+Les artifacts terminologiques (Terminologies et Jeux de Valeurs) français sont accessibles par consultation du           <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a>
+ de l’ANS. Le SMT permet d’accéder de multiples manières aux artifacts : par API FHIR, par interface graphique, par des requêtes SPARQL … Celui-ci est complémentaire aux guides d’implémentations car celui-ci permet d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.
         </td>
       </tr>
       <tr>
