--- a/nr-add-doc-expand-publish/ig/demarrer_sur_fhir.html
+++ b/nr-add-doc-expand-publish/ig/demarrer_sur_fhir.html
@@ -222,9 +222,15 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <p>Liste des implémentations open source :</p>
 
 <ul>
-  <li>https://hl7.org/fhir/R4/implsupport-module.html</li>
-  <li>https://confluence.hl7.org/display/FHIR/Open+Source+Implementations</li>
-  <li>https://foundry.hl7.org/</li>
+  <li>
+   <a href="https://hl7.org/fhir/R4/implsupport-module.html">Implementation Support Module</a>
+  </li>
+    <li>
+   <a href="https://confluence.hl7.org/display/FHIR/Open+Source+Implementations">Implémentations open source</a>
+  </li>
+    <li>
+   <a href="https://foundry.hl7.org">FHIR Foundry</a>
+  </li>
 </ul>
 
 <p>Documentation FHIR :</p>
@@ -259,8 +265,15 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   </li>
  </ul>
 
-<p>N’hésitez pas à explorer d’autres aspects de la spécification FHIR qui vous semblent pertinents ou intéressants par rapport à vos besoins.
-Bonne lecture :-)</p>
+<p>N’hésitez pas à explorer d’autres aspects de la spécification FHIR qui vous semblent pertinents ou intéressants par rapport à vos besoins.</p>
+
+<h3 id="le-serveur-multi-terminologies">Le Serveur Multi Terminologies</h3>
+
+<p>Les artifacts terminologiques (Terminologies et Jeux de Valeurs) français sont accessibles par consultation du <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a> de l’ANS. Le SMT permet d’accéder de multiples manières aux artifacts : par API FHIR, par interface graphique, par des requêtes SPARQL … Celui-ci est complémentaire aux guides d’implémentations car celui-ci permet d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.</p>
+
+<p>Ces jeux de valeurs peuvent reprendre des concepts définis dans des terminologies de deux manières : via l’ajout de concept unitaire, ou via l’ajout de règles logiques (Exemple : l’ensemble des pathologies du système nerveux de la terminologie CIM-10).</p>
+
+<p>Pour accéder à la liste de code associée à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d’obtenir l’ensemble des codes par expansion. Cette opération est disponible sur le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
 
 
 
@@ -303,7 +316,7 @@ Bonne lecture :-)</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Apr 28, 2025 07:18+0000">2025-04-28</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.7 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Apr 28, 2025 07:53+0000">2025-04-28</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
